Update leviosa zindex to fix shadow overlap

--- a/leviosa.css
+++ b/leviosa.css
@@ -1,5 +1,7 @@
 .leviosa {
   box-shadow: 0px 0px 20px #888888;
+  z-index: 10;
+  position: relative;
 }
 .basic-box {
   border: 1px solid;
